--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,11 @@
             <version>3.8.1</version>
             <scope>test</scope>
         </dependency>
+             <dependency>
+    <groupId>mysql</groupId>
+    <artifactId>mysql-connector-java</artifactId>
+    <version>5.1.7</version>
+</dependency>
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
